sfdx-source/force-app/main/default/objects/Agreement__c/Agreement__c.object-meta.xml
<CustomObject>
    <description>LEM -186</description>
    <label>Agreement</label>
    <nameField>
        <label>Agreement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agreements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>