sfdx-source/force-app/main/default/objects/Agreement__c/fields/Activation_Order_Created__c.field-meta.xml
<CustomField>
    <fullName>Activation_Order_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-186: Only create Activation Orders once</description>
    <label>Activation Order Created</label>
    <type>Checkbox</type>
</CustomField>