sfdx-source/force-app/main/default/objects/Agreement__c/fields/Agreed_To_Services__c.field-meta.xml
<CustomField>
    <fullName>Agreed_To_Services__c</fullName>
    <description>LEM-3709 Field used to only Agree to Certain services when Store Agreements are created.</description>
    <label>Agreed To Services</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All</label>
            </value>
            <value>
                <fullName>Drive</fullName>
            </value>
            <value>
                <fullName>Marketplace</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>