sfdx-source/force-app/main/default/objects/Agreement__c/fields/Agreement_Migration_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Migration_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>Agreement Migration External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>