sfdx-source/force-app/main/default/objects/Agreement__c/fields/Contract_Name__c.field-meta.xml
<CustomField>
    <fullName>Contract_Name__c</fullName>
    <description>LEM-2198: It is used to display Contract&apos;s ContractNumber with the link to Contract in the contract details section of the onboarding details on work plan.</description>
    <formula>HYPERLINK(&apos;/&apos; + Contract__c, Contract__r.ContractNumber, &apos;_blank&apos;)</formula>
    <label>Contract Number</label>
    <type>Text</type>
</CustomField>