sfdx-source/force-app/main/default/objects/Agreement__c/fields/Customer_Signed_By__c.field-meta.xml
<CustomField>
    <fullName>Customer_Signed_By__c</fullName>
    <description>Custom	Yes	LEM-2018: Create New fields for Nintex processes.</description>
    <label>Customer Signed By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>