sfdx-source/force-app/main/default/objects/Agreement__c/fields/Customer_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Signed_Date__c</fullName>
    <description>LEM-2018: Create New fields for Nintex processes.</description>
    <label>Customer Signed Date</label>
    <type>Date</type>
</CustomField>