sfdx-source/force-app/main/default/objects/Agreement__c/fields/Deactivation_Date__c.field-meta.xml
<CustomField>
    <fullName>Deactivation_Date__c</fullName>
    <description>LEM-1014 - Set the Deactivation Date for the Agreement</description>
    <label>Deactivation Date</label>
    <type>Date</type>
</CustomField>