sfdx-source/force-app/main/default/objects/Agreement__c/fields/Expiring_Agmt_Nintex_COO__c.field-metA.xml
<CustomField>
    <fullName>Expiring_Agmt_Nintex_COO__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-222497: It is used to indicate agreement expire through nintex process.</description>
    <label>Expiring Agmt Nintex COO</label>
    <type>Checkbox</type>
</CustomField>