sfdx-source/force-app/main/default/objects/Agreement__c/fields/Franchise_Name_With_Address__c.field-meta.xml
<CustomField>
    <fullName>Franchise_Name_With_Address__c</fullName>
    <description>LEM-9499: It indicates legal business name with address for the associated account.</description>
    <formula>Account__r.Franchise_Name_With_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Franchise Name With Address</label>
    <type>Text</type>
</CustomField>