sfdx-source/force-app/main/default/objects/Agreement__c/fields/Migrated_Record__c.field-meta.xml
<CustomField>
    <fullName>Migrated_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Migrated Record?</label>
    <type>Checkbox</type>
</CustomField>