sfdx-source/force-app/main/default/objects/Agreement__c/fields/Nintex_Id__c.field-meta.xml
<CustomField>
    <fullName>Nintex_Id__c</fullName>
    <description>LEM-2018: Create New fields for Nintex processes. This field is to store the Nintex Form Id</description>
    <label>Nintex Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>