sfdx-source/force-app/main/default/objects/Agreement__c/fields/Nintex_URL__c.field-meta.xml
<CustomField>
    <fullName>Nintex_URL__c</fullName>
    <description>LEM-2018: Create New fields for Nintex processes. This field is to store the Nintex URL which will be sent to the Mx via email</description>
    <label>Nintex URL</label>
    <type>Url</type>
</CustomField>