sfdx-source/force-app/main/default/objects/Agreement__c/fields/Serialized_Entitlements_Data__c.field-meta.xml
<CustomField>
    <fullName>Serialized_Entitlements_Data__c</fullName>
    <description>LEM-11329 To store the manage stores entitlement details in JSON format.Selected: Contains ‘Selected packages and selected entitlement’Deselected: Contains ‘Selected packages and deselected entitlements'</description>
    <label>Serialized Entitlements Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>