sfdx-source/force-app/main/default/objects/Agreement__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>LEM-1014 - Stamp the Start date of the Agreement</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>