sfdx-source/force-app/main/default/objects/Agreement__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>LEM-186: Initial Setup of Agreement</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Agreement_Type</valueSetName>
    </valueSet>
</CustomField>