sfdx-source/force-app/main/default/objects/Agreement__c/listViews/All_Agreements.listView-meta.xml
<ListView>
    <fullName>All_Agreements</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Contract__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Type__c</columns>
    <columns>Deactivation_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Agreements</label>
</ListView>